[GStreamer] Raw video rendering broken when Qualcomm quirk is enabled https://bugs.webkit.org/show_bug.cgi?id=308053

Reviewed by Xabier Rodriguez-Calvar.

With the Qualcomm quirk enabled the video sink no longer had GL converters, which broke caps
negotiation in case the media player source element provides raw video, such as the MediaStream mock
video source. In order to fix this we now dynamically insert the GL converters using a pad probe and
checking the accept-caps query.

* Source/WebCore/platform/graphics/gstreamer/GLVideoSinkGStreamer.cpp:
(probeCallback):
(webKitGLVideoSinkConstructed):
* Source/WebCore/platform/gstreamer/GStreamerQuirkQualcomm.cpp:
(WebCore::GStreamerQuirkQualcomm::isVideoCapsGLCompatible const):
* Source/WebCore/platform/gstreamer/GStreamerQuirkQualcomm.h:
* Source/WebCore/platform/gstreamer/GStreamerQuirks.cpp:
(WebCore::GStreamerQuirksManager::isVideoCapsGLCompatible const):
* Source/WebCore/platform/gstreamer/GStreamerQuirks.h:
(WebCore::GStreamerQuirk::videoSinkGLCapsFormat const):
(WebCore::GStreamerQuirk::isVideoCapsGLCompatible const):

Canonical link: https://commits.webkit.org/307814@main