Source/WebCore/platform/graphics/gstreamer/GLVideoSinkGStreamer.cpp
@@ -28,6 +28,7 @@
 #include "GUniquePtrGStreamer.h"
 #include "PlatformDisplay.h"
 #include <gst/gl/gl.h>
+#include <wtf/glib/GThreadSafeWeakPtr.h>
 #include <wtf/glib/WTFGType.h>
 
 #if USE(GBM)
@@ -90,6 +91,70 @@ static void initializeDMABufAvailability()
 }
 #endif
 
+struct GLSinkHolder {
+    GThreadSafeWeakPtr<GstElement> sink;
+};
+WEBKIT_DEFINE_ASYNC_DATA_STRUCT(GLSinkHolder);
+
+static GstPadProbeReturn sinkPadProbeCallback(GstPad*, GstPadProbeInfo* info, gpointer userData)
+{
+    auto query = GST_PAD_PROBE_INFO_QUERY(info);
+    if (GST_QUERY_TYPE(query) != GST_QUERY_ACCEPT_CAPS)
+        return GST_PAD_PROBE_OK;
+
+    GstCaps* caps;
+    gst_query_parse_accept_caps(query, &caps);
+    if (!caps)
+        return GST_PAD_PROBE_OK;
+
+    if (gst_caps_features_contains(gst_caps_get_features(caps, 0), GST_CAPS_FEATURE_MEMORY_GL_MEMORY))
+        return GST_PAD_PROBE_OK;
+
+    auto holder = reinterpret_cast<GLSinkHolder*>(userData);
+    auto sink = holder->sink.get();
+    if (!sink) [[unlikely]]
+        return GST_PAD_PROBE_REMOVE;
+
+    auto& quirksManager = GStreamerQuirksManager::singleton();
+    auto isVideoCapsGLCompatible = quirksManager.isVideoCapsGLCompatible(GRefPtr(caps));
+    GST_DEBUG_OBJECT(sink.get(), "Accept caps query for caps %" GST_PTR_FORMAT " isVideoCapsGLCompatible=%d", caps, isVideoCapsGLCompatible);
+    if (!isVideoCapsGLCompatible)
+        return GST_PAD_PROBE_OK;
+
+    GST_DEBUG_OBJECT(sink.get(), "Inserting GL converters before appsink");
+    auto priv = WEBKIT_GL_VIDEO_SINK(sink.get())->priv;
+    auto upload = makeGStreamerElement("glupload"_s);
+    auto colorconvert = makeGStreamerElement("glcolorconvert"_s);
+    RELEASE_ASSERT(upload);
+    RELEASE_ASSERT(colorconvert);
+
+    auto sinkPad = adoptGRef(gst_element_get_static_pad(sink.get(), "sink"));
+    gst_ghost_pad_set_target(GST_GHOST_PAD_CAST(sinkPad.get()), nullptr);
+
+    gst_bin_add_many(GST_BIN_CAST(sink.get()), upload, colorconvert, nullptr);
+    gst_element_link_many(upload, colorconvert, priv->appSink.get(), nullptr);
+    auto target = adoptGRef(gst_element_get_static_pad(upload, "sink"));
+
+    GstElement* imxVideoConvert = nullptr;
+    if (auto imxVideoConvertFactory = adoptGRef(gst_element_factory_find("imxvideoconvert_g2d"))) {
+        imxVideoConvert = gst_element_factory_create(imxVideoConvertFactory.get(), nullptr);
+        gst_bin_add(GST_BIN_CAST(sink.get()), imxVideoConvert);
+        gst_element_link(imxVideoConvert, upload);
+        target = adoptGRef(gst_element_get_static_pad(imxVideoConvert, "sink"));
+    }
+
+    gst_ghost_pad_set_target(GST_GHOST_PAD_CAST(sinkPad.get()), target.get());
+
+    if (imxVideoConvert)
+        gst_element_sync_state_with_parent(imxVideoConvert);
+    gst_element_sync_state_with_parent(upload);
+    gst_element_sync_state_with_parent(colorconvert);
+
+    gst_query_set_accept_caps_result(query, TRUE);
+    GST_PAD_PROBE_INFO_FLOW_RETURN(info) = GST_FLOW_OK;
+    return GST_PAD_PROBE_HANDLED;
+}
+
 static void webKitGLVideoSinkConstructed(GObject* object)
 {
     G_OBJECT_CLASS(webkit_gl_video_sink_parent_class)->constructed(object);
@@ -107,39 +172,47 @@ static void webKitGLVideoSinkConstructed(GObject* object)
     g_object_set(sink->priv->appSink.get(), "enable-last-sample", FALSE, "emit-signals", TRUE, "max-buffers", 1, nullptr);
     gst_bin_add(GST_BIN_CAST(sink), sink->priv->appSink.get());
 
-    auto sinkPad = adoptGRef(gst_element_get_static_pad(sink->priv->appSink.get(), "sink"));
+    GRefPtr<GstCaps> caps = adoptGRef(gst_caps_new_empty());
 
     auto& quirksManager = GStreamerQuirksManager::singleton();
-    auto glCaps = quirksManager.videoSinkGLCapsFormat();
-    if (!glCaps) {
-        glCaps = adoptGRef(gst_caps_from_string("video/x-raw, format = (string) " GST_GL_CAPS_FORMAT));
-        gst_caps_set_features(glCaps.get(), 0, gst_caps_features_new(GST_CAPS_FEATURE_MEMORY_GL_MEMORY, nullptr));
-    }
+    auto quirkGLCaps = quirksManager.videoSinkGLCapsFormat();
+    if (quirkGLCaps)
+        gst_caps_append(caps.get(), quirkGLCaps.ref());
 
-    if (gst_caps_features_contains(gst_caps_get_features(glCaps.get(), 0), GST_CAPS_FEATURE_MEMORY_GL_MEMORY)) {
-        GstElement* upload = makeGStreamerElement("glupload"_s);
-        GstElement* colorconvert = makeGStreamerElement("glcolorconvert"_s);
-
-        RELEASE_ASSERT(upload);
-        RELEASE_ASSERT(colorconvert);
-        gst_bin_add_many(GST_BIN_CAST(sink), upload, colorconvert, nullptr);
-        gst_element_link_many(upload, colorconvert, sink->priv->appSink.get(), nullptr);
-        sinkPad = adoptGRef(gst_element_get_static_pad(upload, "sink"));
-
-        if (auto imxVideoConvertFactory = adoptGRef(gst_element_factory_find("imxvideoconvert_g2d"))) {
-            auto imxVideoConvert = gst_element_factory_create(imxVideoConvertFactory.get(), nullptr);
-            gst_bin_add(GST_BIN_CAST(sink), imxVideoConvert);
-            gst_element_link(imxVideoConvert, upload);
-            sinkPad = adoptGRef(gst_element_get_static_pad(imxVideoConvert, "sink"));
-        }
-    }
-
-    GRefPtr<GstCaps> caps = adoptGRef(gst_caps_new_empty());
 #if USE(GBM)
     if (!s_isDMABufDisabled)
         gst_caps_append(caps.get(), buildDMABufCaps().leakRef());
 #endif
+
+    auto glCaps = adoptGRef(gst_caps_from_string("video/x-raw, format = (string) " GST_GL_CAPS_FORMAT));
+    gst_caps_set_features(glCaps.get(), 0, gst_caps_features_new(GST_CAPS_FEATURE_MEMORY_GL_MEMORY, nullptr));
     gst_caps_append(caps.get(), glCaps.leakRef());
+
+    auto sinkPad = adoptGRef(gst_element_get_static_pad(sink->priv->appSink.get(), "sink"));
+
+    if (!quirkGLCaps) {
+        auto upload = makeGStreamerElement("glupload"_s);
+        auto colorconvert = makeGStreamerElement("glcolorconvert"_s);
+        RELEASE_ASSERT(upload);
+        RELEASE_ASSERT(colorconvert);
+
+        gst_bin_add_many(GST_BIN_CAST(sink), upload, colorconvert, nullptr);
+        gst_element_link_many(upload, colorconvert, sink->priv->appSink.get(), nullptr);
+        sinkPad = adoptGRef(gst_element_get_static_pad(upload, "sink"));
+
+        GstElement* imxVideoConvert = nullptr;
+        if (auto imxVideoConvertFactory = adoptGRef(gst_element_factory_find("imxvideoconvert_g2d"))) {
+            imxVideoConvert = gst_element_factory_create(imxVideoConvertFactory.get(), nullptr);
+            gst_bin_add(GST_BIN_CAST(sink), imxVideoConvert);
+            gst_element_link(imxVideoConvert, upload);
+            sinkPad = adoptGRef(gst_element_get_static_pad(imxVideoConvert, "sink"));
+        }
+    } else {
+        auto data = createGLSinkHolder();
+        data->sink.reset(GST_ELEMENT_CAST(sink));
+        gst_pad_add_probe(sinkPad.get(), GST_PAD_PROBE_TYPE_QUERY_DOWNSTREAM, sinkPadProbeCallback, data,
+            reinterpret_cast<GDestroyNotify>(destroyGLSinkHolder));
+    }
 
     g_object_set(sink->priv->appSink.get(), "caps", caps.get(), nullptr);
     gst_element_add_pad(GST_ELEMENT_CAST(sink), gst_ghost_pad_new("sink", sinkPad.get()));
